Fix 'Help us improve' feedback form alignment
This updates the button / link alignment so that they are side-by-side
only on desktop; otherwise stacked.
It also updates vertical alignment.

Fixes: #1217

--- a/app/assets/stylesheets/govuk_publishing_components/components/_feedback.scss
+++ b/app/assets/stylesheets/govuk_publishing_components/components/_feedback.scss
@@ -164,9 +164,9 @@
   display: block;
   margin-top: govuk-spacing(3);
 
-  @include govuk-media-query($from: tablet) {
+  @include govuk-media-query($from: desktop) {
     display: inline-block;
-    margin-top: 0;
+    margin-top: govuk-spacing(2);
     margin-left: govuk-spacing(3);
   }
 }
